# veloma

./: .gitignore  README.md  demo.py  handDataFormat.txt  main.py  pyproject.toml  scamp_test.py
app/music/: __init__.py
app/music/soundFonts/: soundFontList.txt
app/ui/: __init__.py  pyqt_ui.py
app/vision/: __init__.py
