[project]
name = "veloma"
version = "0.1.0"
description = "Veloma is a digital instrument inspired by Theremin and designed to create sound through movement. It uses a camera to track the position of your hands, allowing you to control pitch, volume, and other parameters in real-time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "abjad>=3.19",
    "chordparser>=0.4.2",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pynput>=1.8.1",
    "pyqt6>=6.9.1",
    "python-rtmidi>=1.5.8",
    "scamp>=0.9.2.post3",
    "scamp-extensions>=0.3.5.post2",
    "sf2utils>=1.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
